:lock: Adiciona verificação JWT
